--- a/gift/terms.html
+++ b/gift/terms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - TWO GOOD CO.</title>
+    <title>Terms of Service - THE COOL CO.</title>
     <script src="https://unpkg.com/@studio-freight/lenis@latest/dist/lenis.min.js"></script>
     <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
     <style>
@@ -155,17 +155,17 @@
 <body>
     <div class="container">
         <header>
-            <div class="logo">TWO GOOD CO.</div>
+            <div class="logo">THE COOL CO.</div>
             <a href="#contact" class="cta-link">Get in touch</a>
         </header>
 
         <h1>Terms of Service</h1>
 
         <h2>1. Introduction</h2>
-        <p>Welcome to TWO GOOD CO. These Terms of Service ("Terms") govern your access to and use of our website and services. By accessing or using the service, you agree to be bound by these Terms.</p>
+        <p>Welcome to THE COOL CO. These Terms of Service ("Terms") govern your access to and use of our website and services. By accessing or using the service, you agree to be bound by these Terms.</p>
 
         <h2>2. Services Provided</h2>
-        <p>TWO GOOD CO. provides digital strategy, web design, branding, content creation, and performance marketing services. These services are subject to the terms and conditions outlined in this document.</p>
+        <p>THE COOL CO. provides digital strategy, web design, branding, content creation, and performance marketing services. These services are subject to the terms and conditions outlined in this document.</p>
 
         <h2>3. Changes to Terms</h2>
         <p>We reserve the right to modify these Terms at any time. We will notify users of any changes by posting the new Terms on this site. Your continued use of the service after such changes constitutes your agreement to the new Terms.</p>
@@ -180,10 +180,10 @@
         <p>You agree to use the service only for lawful purposes and not to use the service for any illegal or unauthorized purpose.</p>
 
         <h2>7. Intellectual Property</h2>
-        <p>All intellectual property rights in the service and its content are the exclusive property of TWO GOOD CO. or its licensors.</p>
+        <p>All intellectual property rights in the service and its content are the exclusive property of THE COOL CO. or its licensors.</p>
 
         <h2>8. Third-Party Services</h2>
-        <p>Our service may contain links to third-party websites or services that are not owned or controlled by TWO GOOD CO. We have no control over, and assume no responsibility for, the content or practices of any third-party websites or services.</p>
+        <p>Our service may contain links to third-party websites or services that are not owned or controlled by THE COOL CO. We have no control over, and assume no responsibility for, the content or practices of any third-party websites or services.</p>
 
         <h2>9. Termination</h2>
         <p>We may terminate or suspend access to our service immediately, without prior notice or liability, for any reason, including without limitation if you breach the Terms.</p>
@@ -195,7 +195,7 @@
         <p>We reserve the right to withdraw or amend our service, and any service or material we provide via the service, in our sole discretion without notice.</p>
 
         <h2>12. Disclaimer and Limitation of Liability</h2>
-        <p>The service and its content are provided "as is" without warranty of any kind. In no event will TWO GOOD CO., nor its directors, employees, partners, agents, suppliers, or affiliates, be liable for any indirect, incidental, special, consequential or punitive damages, including without limitation, loss of profits, data, use, goodwill, or other intangible losses, resulting from your access to or use of or inability to access or use the service.</p>
+        <p>The service and its content are provided "as is" without warranty of any kind. In no event will THE COOL CO., nor its directors, employees, partners, agents, suppliers, or affiliates, be liable for any indirect, incidental, special, consequential or punitive damages, including without limitation, loss of profits, data, use, goodwill, or other intangible losses, resulting from your access to or use of or inability to access or use the service.</p>
 
         <h2>13. Contact Us</h2>
         <p>For any questions about these Terms, please contact us:</p>
@@ -205,7 +205,7 @@
         </ul>
 
         <footer>
-            <p>© 2025 TWO GOOD CO.</p>
+            <p>© 2025 THE COOL CO.</p>
             <div class="footer-links">
                 <a href="terms.html">Terms of Service</a> |
                 <a href="privacy.html">Privacy Policy</a> |
