--- a/gift/index.html
+++ b/gift/index.html
@@ -35,6 +35,10 @@
 </head>
 
 <body>
+        <div id="preloader">
+            <div class="loader"></div>
+        </div>
+
     <audio id="bg-audio" loop muted style="display: none;">
         <source src="assets/videos/audio.mp3" type="audio/mpeg">
     </audio>
@@ -312,3 +316,4 @@
 
 
 </html>
+
