--- a/index.html
+++ b/index.html
@@ -231,6 +231,27 @@
                 height: 80px;
             }
         }
+        .footer {
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
+    color: #aaa;
+    z-index: 10;
+}
+
+.footer a {
+    color: #aaa;
+    text-decoration: none;
+    margin: 0 10px;
+}
+
+.footer a:hover {
+    color: #fff;
+    text-decoration: underline;
+}
+
     </style>
 </head>
 <body>
@@ -256,7 +277,14 @@
             Contact Us
         </a>
     </div>
+    <div class="footer">
+    <a href="/privacy.html" target="_blank">Privacy Policy</a>
+    |
+    <a href="/terms.html" target="_blank">Terms of Service</a>
+</div>
+
 </body>
 
 </html>
+
 
