Refactor index.html for improved readability

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-QGWXRP60W6"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-QGWXRP60W6');
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-QGWXRP60W6');
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -87,7 +88,7 @@
             left: -100%;
             width: 100%;
             height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(255,255,255,0.8), transparent);
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.8), transparent);
             animation: shimmer 2s infinite;
         }
 
@@ -155,18 +156,54 @@
             animation: float 8s infinite ease-in-out;
         }
 
-        .particle:nth-child(1) { left: 10%; top: 20%; animation-delay: 0s; animation-duration: 6s; }
-        .particle:nth-child(2) { left: 20%; top: 80%; animation-delay: 2s; animation-duration: 8s; }
-        .particle:nth-child(3) { left: 60%; top: 30%; animation-delay: 4s; animation-duration: 7s; }
-        .particle:nth-child(4) { left: 80%; top: 70%; animation-delay: 1s; animation-duration: 9s; }
-        .particle:nth-child(5) { left: 40%; top: 60%; animation-delay: 3s; animation-duration: 6s; }
-        .particle:nth-child(6) { left: 90%; top: 40%; animation-delay: 5s; animation-duration: 8s; }
+        .particle:nth-child(1) {
+            left: 10%;
+            top: 20%;
+            animation-delay: 0s;
+            animation-duration: 6s;
+        }
+
+        .particle:nth-child(2) {
+            left: 20%;
+            top: 80%;
+            animation-delay: 2s;
+            animation-duration: 8s;
+        }
+
+        .particle:nth-child(3) {
+            left: 60%;
+            top: 30%;
+            animation-delay: 4s;
+            animation-duration: 7s;
+        }
+
+        .particle:nth-child(4) {
+            left: 80%;
+            top: 70%;
+            animation-delay: 1s;
+            animation-duration: 9s;
+        }
+
+        .particle:nth-child(5) {
+            left: 40%;
+            top: 60%;
+            animation-delay: 3s;
+            animation-duration: 6s;
+        }
+
+        .particle:nth-child(6) {
+            left: 90%;
+            top: 40%;
+            animation-delay: 5s;
+            animation-duration: 8s;
+        }
 
         @keyframes fadeInDown {
             from {
                 opacity: 0;
                 transform: translateY(-30px);
             }
+
             to {
                 opacity: 1;
                 transform: translateY(0);
@@ -178,6 +215,7 @@
                 opacity: 0;
                 transform: translateY(30px);
             }
+
             to {
                 opacity: 1;
                 transform: translateY(0);
@@ -185,9 +223,12 @@
         }
 
         @keyframes loading {
-            0%, 100% {
+
+            0%,
+            100% {
                 opacity: 0.3;
             }
+
             50% {
                 opacity: 1;
             }
@@ -197,23 +238,29 @@
             0% {
                 left: -100%;
             }
+
             100% {
                 left: 200%;
             }
         }
 
         @keyframes float {
-            0%, 100% {
+
+            0%,
+            100% {
                 transform: translateY(0) translateX(0);
                 opacity: 0;
             }
+
             10% {
                 opacity: 0.3;
             }
+
             50% {
                 transform: translateY(-50px) translateX(20px);
                 opacity: 0.5;
             }
+
             90% {
                 opacity: 0.3;
             }
@@ -223,37 +270,40 @@
             h1 {
                 font-size: 2rem;
             }
+
             .subtitle {
                 font-size: 1rem;
             }
+
             .logo {
                 width: 80px;
                 height: 80px;
             }
         }
+
         .footer {
-    position: absolute;
-    bottom: 20px;
-    width: 100%;
-    text-align: center;
-    font-size: 14px;
-    color: #aaa;
-    z-index: 10;
-}
+            position: absolute;
+            bottom: 20px;
+            width: 100%;
+            text-align: center;
+            font-size: 14px;
+            color: #aaa;
+            z-index: 10;
+        }
 
-.footer a {
-    color: #aaa;
-    text-decoration: none;
-    margin: 0 10px;
-}
+        .footer a {
+            color: #aaa;
+            text-decoration: none;
+            margin: 0 10px;
+        }
 
-.footer a:hover {
-    color: #fff;
-    text-decoration: underline;
-}
-
+        .footer a:hover {
+            color: #fff;
+            text-decoration: underline;
+        }
     </style>
 </head>
+
 <body>
     <!-- Background particles -->
     <div class="particle"></div>
@@ -272,19 +322,18 @@
         <div class="loader"></div>
         <a href="https://wa.me/8766334584" class="contact-btn" target="_blank">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
-                <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
+                <path
+                    d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z" />
             </svg>
             Contact Us
         </a>
     </div>
     <div class="footer">
-    <a href="/privacy.html" target="_blank">Privacy Policy</a>
-    |
-    <a href="/terms.html" target="_blank">Terms of Service</a>
-</div>
+        <a href="/privacy.html" target="_blank">Privacy Policy</a>
+        |
+        <a href="/terms.html" target="_blank">Terms of Service</a>
+    </div>
 
 </body>
 
 </html>
-
-
